# drevo-mcp

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
drevo_mcp/: __init__.py  __main__.py  client.py  server.py
drevo_mcp_bolt/: __init__.py  __main__.py  graph.py  server.py
scripts/: run-drevo.sh
tests/: test_client.py  test_compose.py  test_config.py  test_docs.py  test_integration.py  test_run_script.py  test_tools.py
