[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "drevo-mcp"
version = "0.1.0"
description = "External FastMCP server exposing a running drevo HTTP server as MCP tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "drevo contributors", email = "noreply@ice1x.dev" }]
keywords = ["drevo", "mcp", "fastmcp", "graph", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Typing :: Typed",
]
# Talks to a running `drevo-server` over HTTP only — no dependency on the
# `drevo` core or its Python bindings, and it never opens the redb file.
dependencies = ["fastmcp>=2", "httpx>=0.27"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24",
    "faker>=24",
]

[project.scripts]
drevo-mcp = "drevo_mcp.server:main"

[project.urls]
Homepage = "https://github.com/ice1x/drevo"
Repository = "https://github.com/ice1x/drevo"

[tool.setuptools]
packages = ["drevo_mcp"]

[tool.setuptools.package-data]
drevo_mcp = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.black]
target-version = ["py310", "py311", "py312", "py313"]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
