[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "drevo-mcp-bolt"
version = "0.1.0"
description = "Bolt knowledge-graph MCP (write-capable), pointed at a running drevo server"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "drevo contributors", email = "noreply@ice1x.dev" }]
keywords = ["drevo", "neo4j", "bolt", "mcp", "knowledge-graph", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Typing :: Typed",
]
# Talks Bolt to a running drevo-server (DREVO_BOLT_PORT) or a real Neo4j —
# the official `neo4j` driver, plus the MCP SDK's FastMCP. No drevo dependency.
dependencies = ["mcp>=1.2", "neo4j>=5,<6"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24",
    "faker>=24",
]

[project.scripts]
drevo-mcp-bolt = "drevo_mcp_bolt.server:main"

[project.urls]
Homepage = "https://github.com/ice1x/drevo-mcp"
Repository = "https://github.com/ice1x/drevo-mcp"

[tool.setuptools]
packages = ["drevo_mcp_bolt"]

[tool.setuptools.package-data]
drevo_mcp_bolt = ["py.typed"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.black]
target-version = ["py313"]
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
